public class Consts
{
    public struct PlayerAnimations
    {
        public const string IS_MOVING = "IsMoving";
        public const string IS_JUMPING = "IsJumping";
        public const string IS_SLIDING = "IsSliding";
        public const string IS_SLIDING_ACTIVE = "IsSlidingActive";
    }

    public struct CatAnimations
    {
        public const string IS_IDLING = "IsIdling";
        public const string IS_RUNNING = "IsRunning";
    }
}
